# pnp4nagios

./: .gitignore  .phpcs.xml  .phplint.yml  AUTHORS  ChangeLog  Makefile.in  README.md  THANKS  aclocal.m4  autogen.sh  configure  configure.ac  pnp4nagios.fc.in  pnp4nagios.te  subst.in  summary.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  releasebuild.yml
ci/: .gitignore  maketar.sh  mockbuild.sh  pnp4nagios.spec  pnp4nagios.spec.in
contrib/: .gitignore  pnp4nagios.spec
contrib/fedora/: npcd.service  npcd.sysconfig  pnp4nagios-README.fedora  pnp4nagios-npcd.sysvinit  pnp4nagios.httpd.plugin.conf  pnp4nagios.logrotate.conf  pnp4nagios.logrotate.conf.in
contrib/ssi/: status-header.ssi.in
include/: .gitignore  config.h.in  stamp-h.in
lib/: Makefile.in
lib/kohana/system/config/: cache.php  cache_memcache.php  cache_sqlite.php  cache_xcache.php  captcha.php  cookie.php  credit_cards.php  database.php  email.php  encryption.php  http.php  image.php  inflector.php  locale.php  mimes.php  pagination.php  profiler.php  routes.php  session.php  sql_types.php  upload.php  user_agents.php  view.php
lib/kohana/system/controllers/: captcha.php  template.php
lib/kohana/system/core/: Benchmark.php  Bootstrap.php  Event.php  Kohana.php  Security.php  utf8.php
lib/kohana/system/helpers/: arr.php  cookie.php  date.php  download.php  email.php  expires.php  feed.php  file.php  form.php  format.php  html.php  inflector.php  num.php  remote.php  request.php  security.php  text.php  upload.php  url.php  valid.php
lib/kohana/system/libraries/: Cache.php  Calendar.php  Calendar_Event.php  Captcha.php  Controller.php  Database.php  Database_Expression.php  Encrypt.php  Event_Observer.php  Event_Subject.php  Image.php  Input.php  Model.php  ORM.php  ORM_Iterator.php  ORM_Tree.php  ORM_Versioned.php  Pagination.php  Profiler.php  Profiler_Table.php  Router.php  Session.php  Tagcloud.php  URI.php  Validation.php  View.php
lib/kohana/system/views/: kohana_calendar.php  kohana_error_disabled.php  kohana_error_page.php  kohana_profiler.php  kohana_profiler_table.php
man/: .gitignore  Makefile.in  npcd.8.in
sample-config/: .gitignore  Makefile.in  NagiosCfgMod.pl.in  README_config.md.in  SetLogLevels.in  SuggestInstall.in  TemplateMod.pl  httpd.conf.in  lighttpd.pnp4nagios.conf.in  misccommands.cfg-sample.in  nginx.pnp4nagios.conf.in  pnp-bulk.cfg-sample  pnp-bulk.cfg-sample.in  pnp-npcd.cfg-sample  pnp-npcd.cfg-sample.in  pnp-synchronous.cfg-sample  pnp-synchronous.cfg-sample.in
sample-config/config_samples/: apache.pnp4nagios.conf  apache.pnp4nagios.conf.in  config.php  config.php.in  config_local.php  lighttpd.pnp4nagios.conf  lighttpd.pnp4nagios.conf.in  nagios.cfg  nagios.cfg.in  nginx.pnp4nagios.conf  nginx.pnp4nagios.conf.in  npcd.cfg  npcd.cfg.in  pnp-bulk.cfg  pnp-bulk.cfg.in  pnp-npcd.cfg  pnp-npcd.cfg.in  pnp-sync.cfg  process_perfdata.cfg  process_perfdata.cfg.in  templates.cfg
sample-config/config_tools/: NagiosCfgMod.pl  NagiosCfgMod.pl.in  TemplateMod.pl  TemplateMod.pl.in  verify_pnp_config  verify_pnp_config.in
sample-config/pnp/: config.php.in  npcd.cfg-sample.in  pnp4nagios_release.in  process_perfdata.cfg-sample.in
scripts/: .gitignore  Makefile.in  check_pnp_rrds.pl.in  config4rpm_path.sh  newbsd.npcd.in  npcd.openrc.in  npcd.service.in  npcd.upstart.in  pnp_gearman_worker.service.in  process_perfdata.pl.in  rc.npcd.in  rc.pnp_gearman_worker.in  rrd_convert.pl.in  rrd_modify.pl.in
share/: .gitignore  Makefile.in
share/pnp/: index.php.in  install.ignore.not  install.php.in
share/pnp/application/config/: config.php  locale.php  routes.php  session.php
share/pnp/application/controllers/: ajax.php  color.php  debug.php  docs.php  graph.php  image.php  json.php  mobile.php  page.php  pdf.php  popup.php  special.php  start.php  system.php  xml.php  xport.php  zoom.php
share/pnp/application/helpers/: nagios.php  pnp.php  rrd.php
share/pnp/application/models/: auth.php  auth_multisite.php  config.php  data.php  rrdtool.php  system.php
share/pnp/application/views/: basket_box.php  color.php  color_box.php  debug.php  docs.php  docs_box.php  graph.php  graph_content.php  graph_content_special.php  graph_tiny.php  header.php  host_box.php  icon_box.php  kohana_error_page.php  logo_box.php  mobile.php  mobile_about.php  mobile_graph.php  mobile_graph_special.php  mobile_home.php  mobile_host.php  mobile_overview.php  mobile_pages.php  mobile_search.php  mobile_special.php  multisite_box.php  page.php  pages_box.php  popup.php  search_box.php  service_box.php  special_templates_box.php  status_box.php  template.php  timerange_box.php  timerange_select.php  widget_graph.sample.php  widget_menu.sample.php  zoom.php  zoom_header.php
share/pnp/documents/de_DE/: about.html  advanced.html  config.html  (+13 more)
share/pnp/templates.dist/: arrayfix.php  check-host-alive.php  check_apachestatus.php  check_apachestatus_auto.php  check_dell_bladechassis.php  check_disk.php  check_dns.php  check_esx3.php  check_fping.php  check_gearman.php  check_hp_bladechassis.php  check_hpasm.php  check_http.php  check_iftraffic_counter.php  check_iftraffic_pct.php  check_jmx4perl_connector_errors.php  check_jmx4perl_connector_nr_requests.php  check_jmx4perl_connector_proc_time.php  check_jmx4perl_connector_received.php  check_jmx4perl_connector_sent.php  check_jmx4perl_connector_threads.php  check_jmx4perl_memory_gc_count.php  check_jmx4perl_memory_gc_time.php  check_jmx4perl_memory_heap.php  check_jmx4perl_thread_count.php  check_jmx4perl_thread_increase.php  check_load.php  check_local_load.php  check_messpc_temp.php  check_mssql_health.php  check_multi.php  check_multi_nagiostats.php  check_mysql_health.php  check_nt_cpu.php  check_nt_disk.php  check_nt_mem.php  check_ntp_time.php  check_nwstat_CONNS.php  check_nwstat_LOAD.php  check_nwstat_LOAD5.php  (+24 more)
share/pnp/templates.special/: advanced_loop.php-sample  loop.php-sample  static.php-sample
src/: .gitignore  Makefile.in  config.c  config.c.in  npcd.c  npcdmod.c  npcdmod.c.in  pnpsender.c  utils.c
(+227 files in other folders)
